--- a/style.css
+++ b/style.css
@@ -105,27 +105,24 @@ li:hover::after {
     cursor: pointer;
     transition: 0.5s;
 }
+
+
+
+/* ------------880px---------------- */
 @media only screen and (max-width:880px) {
     .navbar ul {
         right: 10px;
-        /* font-size: small; */
-        margin-top: 32px;
+        margin-bottom: 20px;
     }
 }
-
+/* ----------------------770pc-------------------= */
 @media only screen and (max-width:770px) {
-    .navbar ul {
-        font-size: 11px;
-        font-weight: 600;
 
-    }
     .logo{
         width: 90px;
     height: 40px;
     padding: 40px 20px;
-    }
-    .text-box {
-        font-size: small;
+    margin-top: 6px;
     }
 
     .text-box h1 {
@@ -142,7 +139,8 @@ li:hover::after {
         font-family: monospace;
     }
 }
-@media only screen and (max-width:588px){
+/* ---------------------670px--------------- */
+@media only screen and (max-width:670px){
     li a{
         
         font-weight: bolder;
@@ -155,9 +153,10 @@ li:hover::after {
         display:block;
     }
 }
+/* ----------------------520px----------------------- */
 @media only screen and (max-width:520px){
       .text-box h1 {
-        font-size: 40px;
+        font-size: 30px;
         font-family: "Zalando Sans Expanded", sans-serif;
         font-optical-sizing: auto;
         font-weight: weight;
@@ -170,6 +169,8 @@ li:hover::after {
         display:block;
     }
 }
+
+
 div .fa-bars{
     display: none;
     padding: 13px;
@@ -181,7 +182,7 @@ div .fa-bars{
 .course {
     background-image: none;
     width: 100%;
-    height: 80vh;
+    height: 75vh;
     color: black;
 }
 .course h1{
@@ -209,7 +210,7 @@ div .fa-bars{
     }
     .campus .container{
         position: relative;
-        top:40%
+         top: 27%;
     }
 } 
 /* 550 WIDHT */
@@ -253,24 +254,24 @@ div .fa-bars{
    border-bottom: 2px solid red;
    
 }
-.campus .heading{
-    
+.campus .heading{   
     text-align: center;
-    /* font-size: 20px; */
     padding: 60px;
     position: relative;
-    top: -15px;
+    bottom: 90px;
        font-family: "Momo Trust Display", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
+
+/* -------------------770px----------------- */
  @media only screen and (max-width:770px){
     .campus .heading{
         position: relative;
-        top: 221px;
+          top: 195px;
     }
 } 
-
+/* -------------------------------------------------- */
 .campus p{
     color: grey;
 }
@@ -360,10 +361,6 @@ div .fa-bars{
     /* transition: 0.5s; */
     font-size: large;
 }
-.campus .heading{
-            position: relative;
-        bottom: 51px;
-}
 .img2:hover h3{
     background: rgba(147, 147, 147, 0.279);
     position: relative;
@@ -389,7 +386,7 @@ div .fa-bars{
     font-size: large;
 }
 }
-
+/* ------------------------------------------------------ */
 
 /*------------------ 1000 PX--------------------- */
 @media only screen and (max-width:1000px){
@@ -516,16 +513,15 @@ div .fa-bars{
     font-size:10px;
 }
 } 
- @media only screen and (max-width:400px){
+ @media only screen and (max-width:500px){
 
     .campus .heading{
-        font-size: 15px;
          position: relative;
-        top: 48%;
+        top: 31%;
     }
     .campus .container{
         position: relative;
-        top: 48%;
+        top: 29%;
     }
 
     .img1:hover h3{
@@ -567,7 +563,7 @@ div .fa-bars{
 }
 } 
 .last h4{
-    
+
     margin-bottom: 20px;
     font-weight: bolder;
      font-family: "Zalando Sans Expanded", sans-serif;
@@ -578,9 +574,26 @@ div .fa-bars{
 .last{
     padding: 20px;
     position: relative;
-    top: 60px;
+        top: 40%;
     font-size: smaller;
 }
 span{
     padding: 20px;
 }
+/* =----------------------------34px---------------------- */
+@media only screen and (max-width:317px){
+    .heading {
+        position: relative;
+        top: 50px;
+    }
+}
+
+ @media only screen and (max-width:2500px){
+.last{
+    padding: 20px;
+    position: relative;
+    top: 33%;
+    font-size: smaller;
+    margin-top: 57px;
+}
+ }
