--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ section {
     width: 100px;
     height: 50px;
     padding: 40px 30px;
-        position: absolute;
+    position: absolute;
     top: 0;
     left: 20px;
 }
@@ -59,7 +59,7 @@ li::after {
     background: orangered;
     display: block;
     margin: auto;
-    
+
     transition: 0.5s;
 }
 
@@ -74,9 +74,11 @@ li:hover::after {
     top: 41%;
     left: 5%;
 }
-.child{
+
+.child {
     display: none;
 }
+
 .text-box h1 {
     font-size: 60px;
     font-family: "Zalando Sans Expanded", sans-serif;
@@ -115,14 +117,15 @@ li:hover::after {
         margin-bottom: 20px;
     }
 }
+
 /* ----------------------770pc-------------------= */
 @media only screen and (max-width:770px) {
 
-    .logo{
+    .logo {
         width: 90px;
-    height: 40px;
-    padding: 40px 20px;
-    margin-top: 6px;
+        height: 40px;
+        padding: 40px 20px;
+        margin-top: 6px;
     }
 
     .text-box h1 {
@@ -139,42 +142,48 @@ li:hover::after {
         font-family: monospace;
     }
 }
+
 /* ---------------------670px--------------- */
-@media only screen and (max-width:670px){
-    li a{
-        
+@media only screen and (max-width:670px) {
+    li a {
+
         font-weight: bolder;
     }
-    ul li a{
+
+    ul li a {
         display: none;
     }
-    
-     .toggle-btn .fa-bars{
-        display:block;
+
+    .toggle-btn .fa-bars {
+        display: block;
     }
 }
+
 /* ----------------------520px----------------------- */
-@media only screen and (max-width:520px){
-      .text-box h1 {
+@media only screen and (max-width:520px) {
+    .text-box h1 {
         font-size: 30px;
         font-family: "Zalando Sans Expanded", sans-serif;
         font-optical-sizing: auto;
         font-weight: weight;
         font-style: normal;
     }
-       .text-box {
+
+    .text-box {
         font-size: 15px;
     }
-     .toggle-btn .fa-bars{
-        display:block;
+
+    .toggle-btn .fa-bars {
+        display: block;
     }
 }
 
 
-div .fa-bars{
+div .fa-bars {
     display: none;
     padding: 13px;
-    font-size:  30px;;
+    font-size: 30px;
+    ;
 }
 
 
@@ -185,111 +194,130 @@ div .fa-bars{
     height: 75vh;
     color: black;
 }
-.course h1{
+
+.course h1 {
     border-bottom: 2px solid red;
 }
-.course .heading{
+
+.course .heading {
     text-align: center;
     /* font-size: 20px; */
     padding: 60px;
-    top:30px;
+    top: 30px;
     position: relative;
-       font-family: "Momo Trust Display", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+    font-family: "Momo Trust Display", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
+
 .course p {
-     color: rgb(141, 141, 141);
-     margin-top: 10px;
-     
+    color: rgb(141, 141, 141);
+    margin-top: 10px;
+
 }
+
 /* 770 WIDHT */
- @media only screen and (max-width:770px){
-     .boxes{
+@media only screen and (max-width:770px) {
+    .boxes {
         flex-direction: column;
     }
-    .campus .container{
+
+    .campus .container {
         position: relative;
-         top: 27%;
+        top: 27%;
     }
-} 
+}
+
 /* 550 WIDHT */
- @media only screen and (max-width:550px){
-    h1{
+@media only screen and (max-width:550px) {
+    h1 {
         font-size: 25px;
     }
 
 }
- .boxes{
+
+.boxes {
     display: flex;
     text-align: center;
-    justify-content: space-between; 
-} .box{
-    background-color:beige;
+    justify-content: space-between;
+}
+
+.box {
+    background-color: beige;
     border-radius: 10px;
     margin: 5%;
     padding: 20px 12px;
-    box-sizing:border-box;
-      font-family: "Story Script", sans-serif;
-  font-weight: 400;
-  font-style: normal; 
- }
-.box h3{
-    font-family: "Momo Trust Display", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+    box-sizing: border-box;
+    font-family: "Story Script", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
-.box:hover{
+
+.box h3 {
+    font-family: "Momo Trust Display", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.box:hover {
     box-shadow: 1px 1px 10px 1px grey;
     transition: 0.5s;
 
-}  
+}
+
 /* SECTION 3 */
-.campus{
+.campus {
     background-image: none;
     text-align: center;
-    
+
 }
-.campus h1{
-   border-bottom: 2px solid red;
-   
+
+.campus h1 {
+    border-bottom: 2px solid red;
+
 }
-.campus .heading{   
+
+.campus .heading {
     text-align: center;
     padding: 60px;
     position: relative;
     bottom: 90px;
-       font-family: "Momo Trust Display", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+    font-family: "Momo Trust Display", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 /* -------------------770px----------------- */
- @media only screen and (max-width:770px){
-    .campus .heading{
+@media only screen and (max-width:770px) {
+    .campus .heading {
         position: relative;
-          top: 195px;
+        top: 195px;
     }
-} 
+}
+
 /* -------------------------------------------------- */
-.campus p{
+.campus p {
     color: grey;
 }
-.container{
+
+.container {
     display: flex;
     justify-content: center;
 }
-.container h3{
-  color: black;
-  display: none;
-  
+
+.container h3 {
+    color: black;
+    display: none;
+
 }
-.container img{
+
+.container img {
     width: 70%;
     text-align: center;
     border-radius: 10px;
 }
-.img1:hover h3{
+
+.img1:hover h3 {
     display: block;
     background: rgba(82, 81, 81, 0.279);
     position: relative;
@@ -301,12 +329,13 @@ div .fa-bars{
     color: black;
     transition: 1s;
     font-size: xx-large;
-      font-family: "Zalando Sans Expanded", sans-serif;
+    font-family: "Zalando Sans Expanded", sans-serif;
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
 }
-.img2:hover h3{
+
+.img2:hover h3 {
     display: block;
     background: rgba(70, 70, 70, 0.279);
     position: relative;
@@ -318,15 +347,16 @@ div .fa-bars{
     color: black;
     transition: 0.5s;
     font-size: xx-large;
-      font-family: "Zalando Sans Expanded", sans-serif;
+    font-family: "Zalando Sans Expanded", sans-serif;
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
 }
-.img3:hover h3{
-     display: block ;
 
-      background: rgba(72, 71, 71, 0.279);
+.img3:hover h3 {
+    display: block;
+
+    background: rgba(72, 71, 71, 0.279);
     position: relative;
     bottom: 93%;
     height: 92.4%;
@@ -336,214 +366,225 @@ div .fa-bars{
     color: black;
     transition: 0.5s;
     font-size: xx-large;
-      font-family: "Zalando Sans Expanded", sans-serif;
+    font-family: "Zalando Sans Expanded", sans-serif;
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
 }
-.imgs:hover img{
+
+.imgs:hover img {
     background-blend-mode: color red;
-    
+
     box-shadow: 2px 2px 20px 1px rgb(75, 75, 75);
     transition: 0.5s;
 }
+
 /* -------------------1290px----------------- */
-@media only screen and (max-width:1290px){
-    .img1:hover h3{
-    background: rgba(147, 147, 147, 0.279);
-    position: relative;
-    bottom: 95%;
-    height: 92.4%;
-    left: 15%;
-    width: 70%;
-    border-radius: 10px;
-    color: black;
-    /* transition: 0.5s; */
-    font-size: large;
+@media only screen and (max-width:1290px) {
+    .img1:hover h3 {
+        background: rgba(147, 147, 147, 0.279);
+        position: relative;
+        bottom: 95%;
+        height: 92.4%;
+        left: 15%;
+        width: 70%;
+        border-radius: 10px;
+        color: black;
+        /* transition: 0.5s; */
+        font-size: large;
+    }
+
+    .img2:hover h3 {
+        background: rgba(147, 147, 147, 0.279);
+        position: relative;
+        bottom: 95%;
+        height: 92.4%;
+        left: 15%;
+        width: 70%;
+        border-radius: 10px;
+        color: black;
+        /* transition: 0.5s; */
+        font-size: large;
+    }
+
+    .img3:hover h3 {
+        background: rgba(147, 147, 147, 0.279);
+        position: relative;
+        bottom: 95%;
+        height: 92.4%;
+        left: 15%;
+        width: 70%;
+        border-radius: 10px;
+        color: black;
+        /* transition: 0.5s; */
+        font-size: large;
+    }
 }
-.img2:hover h3{
-    background: rgba(147, 147, 147, 0.279);
-    position: relative;
-    bottom: 95%;
-    height: 92.4%;
-    left: 15%;
-    width: 70%;
-    border-radius: 10px;
-    color: black;
-    /* transition: 0.5s; */
-    font-size: large;
-}
-.img3:hover h3{
-      background: rgba(147, 147, 147, 0.279);
-    position: relative;
-    bottom: 95%;
-    height: 92.4%;
-    left: 15%;
-    width: 70%;
-    border-radius: 10px;
-    color: black;
-    /* transition: 0.5s; */
-    font-size: large;
-}
-}
+
 /* ------------------------------------------------------ */
 
 /*------------------ 1000 PX--------------------- */
-@media only screen and (max-width:1000px){
-    .img1:hover h3{
-    background: rgba(147, 147, 147, 0.279);
-    position: relative;
-    bottom: 94%;
-    height: 92.4%;
-    left: 15%;
-    width: 70%;
-    border-radius: 10px;
-    color: black;
-    /* transition: 0.5s; */
-    font-size: large;
-}
+@media only screen and (max-width:1000px) {
+    .img1:hover h3 {
+        background: rgba(147, 147, 147, 0.279);
+        position: relative;
+        bottom: 94%;
+        height: 92.4%;
+        left: 15%;
+        width: 70%;
+        border-radius: 10px;
+        color: black;
+        /* transition: 0.5s; */
+        font-size: large;
+    }
 
-.img2:hover h3{
-    background: rgba(147, 147, 147, 0.279);
-    position: relative;
-    bottom: 94%;
-    height: 92.4%;
-    left: 15%;
-    width: 70%;
-    border-radius: 10px;
-    color: black;
-    /* transition: 0.5s; */
-    font-size: large;
-}
-.img3:hover h3{
-      background: rgba(147, 147, 147, 0.279);
-    position: relative;
-    bottom: 94%;
-    height: 92.4%;
-    left: 15%;
-    width: 70%;
-    border-radius: 10px;
-    color: black;
-    /* transition: 0.5s; */
-    font-size: large;
-}
+    .img2:hover h3 {
+        background: rgba(147, 147, 147, 0.279);
+        position: relative;
+        bottom: 94%;
+        height: 92.4%;
+        left: 15%;
+        width: 70%;
+        border-radius: 10px;
+        color: black;
+        /* transition: 0.5s; */
+        font-size: large;
+    }
+
+    .img3:hover h3 {
+        background: rgba(147, 147, 147, 0.279);
+        position: relative;
+        bottom: 94%;
+        height: 92.4%;
+        left: 15%;
+        width: 70%;
+        border-radius: 10px;
+        color: black;
+        /* transition: 0.5s; */
+        font-size: large;
+    }
 }
 
 /* ---------------------770PX----------------------- */
 
-@media only screen and (max-width:770px){
-    .img1:hover h3{
-    background: rgba(147, 147, 147, 0.279);
-    position: relative;
-    bottom: 93%;
-    height: 92.4%;
-    left: 15%;
-    width: 70%;
-    border-radius: 10px;
-    color: black;
-    /* transition: 0.5s; */
-    font-size: large;
-}
+@media only screen and (max-width:770px) {
+    .img1:hover h3 {
+        background: rgba(147, 147, 147, 0.279);
+        position: relative;
+        bottom: 93%;
+        height: 92.4%;
+        left: 15%;
+        width: 70%;
+        border-radius: 10px;
+        color: black;
+        /* transition: 0.5s; */
+        font-size: large;
+    }
 
 
-.img2:hover h3{
-    background: rgba(147, 147, 147, 0.279);
-    position: relative;
-    bottom: 93%;
-    height: 92.4%;
-    left: 15%;
-    width: 70%;
-    border-radius: 10px;
-    color: black;
-    /* transition: 0.5s; */
-    font-size: large;
-}
-.img3:hover h3{
-      background: rgba(147, 147, 147, 0.279);
-    position: relative;
-    bottom: 93%;
-    height: 90%;
-    left: 15%;
-    width: 70%;
-    border-radius: 10px;
-    color: black;
-    /* transition: 0.5s; */
-    font-size: large;
+    .img2:hover h3 {
+        background: rgba(147, 147, 147, 0.279);
+        position: relative;
+        bottom: 93%;
+        height: 92.4%;
+        left: 15%;
+        width: 70%;
+        border-radius: 10px;
+        color: black;
+        /* transition: 0.5s; */
+        font-size: large;
+    }
 
-}
+    .img3:hover h3 {
+        background: rgba(147, 147, 147, 0.279);
+        position: relative;
+        bottom: 93%;
+        height: 90%;
+        left: 15%;
+        width: 70%;
+        border-radius: 10px;
+        color: black;
+        /* transition: 0.5s; */
+        font-size: large;
+
+    }
 }
 
 /* ----------------670px----------- */
- @media only screen and (max-width:670px){
-    .img1:hover h3{
-    background: rgba(147, 147, 147, 0.279);
-    position: relative;
-    bottom: 92%;
-    height: 85%;
-    left: 15%;
-    width: 70%;
-    border-radius: 10px;
-    color: black;
-    font-size:10px;
+@media only screen and (max-width:670px) {
+    .img1:hover h3 {
+        background: rgba(147, 147, 147, 0.279);
+        position: relative;
+        bottom: 92%;
+        height: 85%;
+        left: 15%;
+        width: 70%;
+        border-radius: 10px;
+        color: black;
+        font-size: 10px;
+    }
+
+    .img2:hover h3 {
+        background: rgba(147, 147, 147, 0.279);
+        position: relative;
+        bottom: 92%;
+        height: 85%;
+        left: 15%;
+        width: 70%;
+        border-radius: 10px;
+        color: black;
+
+        font-size: 10px;
+    }
+
+    .img3:hover h3 {
+        background: rgba(147, 147, 147, 0.279);
+        position: relative;
+        bottom: 92%;
+        height: 85%;
+        left: 15%;
+        width: 70%;
+        border-radius: 10px;
+        color: black;
+        font-size: 10px;
+    }
 }
 
-.img2:hover h3{
-    background: rgba(147, 147, 147, 0.279);
-    position: relative;
-    bottom: 92%;
-    height: 85%;
-    left: 15%;
-    width: 70%;
-    border-radius: 10px;
-    color: black;
-
-    font-size:10px;
-}
-.img3:hover h3{
-      background: rgba(147, 147, 147, 0.279);
-    position: relative;
-    bottom: 92%;
-    height: 85%;
-    left: 15%;
-    width: 70%;
-    border-radius: 10px;
-    color: black;
-    font-size:10px;
-}
-} 
-
-.last h4{
+.last h4 {
 
     margin-bottom: 20px;
     font-weight: bolder;
-     font-family: "Zalando Sans Expanded", sans-serif;
+    font-family: "Zalando Sans Expanded", sans-serif;
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
 }
-.last{
+
+.last {
     padding: 20px;
     position: relative;
-        top: 40%;
+    top: 40%;
     font-size: smaller;
 }
-span{
+
+span {
     padding: 20px;
 }
+
 /* =----------------------------34px---------------------- */
-@media only screen and (max-width:317px){
+@media only screen and (max-width:317px) {
     .heading {
         position: relative;
         top: 50px;
     }
 }
 
- @media only screen and (max-width:2500px){
-.last{
-    padding: 20px;
-    position: relative;
-    top: 33%;
-    font-size: smaller;
-    margin-top: 57px;
+@media only screen and (max-width:2500px) {
+    .last {
+        padding: 20px;
+        position: relative;
+        top: 33%;
+        font-size: smaller;
+        margin-top: 57px;
+    }
 }
- }
